--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inria+Serif:wght@300&family=Italianno&display=swap');
 
+html, body {margin:0; height:100%; overflow:hidden}
+
 .material-symbols-outlined {
     transform: translateY(20%);
     font-variation-settings:
